style index page

--- a/public/styles/components/_drawer.scss
+++ b/public/styles/components/_drawer.scss
@@ -5,7 +5,7 @@
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: #fbfbfb;
+  background-color: #fbfbfa;
   overflow-x: hidden;
   padding-top: 1em;
   transition: 0.5s;
