--- a/public/styles/components/_note.scss
+++ b/public/styles/components/_note.scss
@@ -29,4 +29,9 @@
     text-decoration: none;
     color: red;
   }
+
+  .archive-week {
+    display: flex;
+    justify-content: flex-start;
+  }
 }
