--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -6,23 +6,20 @@
 
   <body>
     <%- include('./partials/header.ejs', {yearWeek: yearWeek, currentWeek:
-    currentWeek}) %>
-
+    currentWeek}) %> <% groupedNotesArray.forEach(note => { %>
+    <div class="archive-week">
+      <h2><%= `Week ${note.date}` %></h2>
+      <h3><%= note.tagInput %></h3>
+    </div>
+    <% for(let item of note.notes) { %>
     <ul class="note-item">
-      <% groupedNotesArray.forEach(note => { %>
-      <div>
-        <h2><%= `Week ${note.date}` %></h2>
-        <h3><%= note.tagInput %></h3>
-      </div>
-      <% for(let item of note.notes) { %>
       <li data-id="<%= item._id %>">
-        <div>TITLE: <%= item.headerInput %></div>
-        <div>TAGS: <%= item.tagInput %></div>
+        <div><%= item.headerInput %></div>
+        <div><%= item.tagInput %></div>
         <a href="/note/<%= item._id%>">Go to note</a>
         <a href="/note/remove/<%= item._id %>">Remove</a>
       </li>
-      <% }}) %>
     </ul>
-    <%- include('./partials/footer.ejs' ) %>
+    <% }}) %>
   </body>
 </html>
