--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -3,6 +3,7 @@
 @use "./components/label";
 @use "./components/drawer";
 @use "./components/detailNote";
+@use "./components/tag";
 
 @use "./base/reset";
 
