--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -152,6 +152,26 @@
   gap: 1em;
 }
 
+.filter-tags {
+  border: none;
+  border-bottom: 1px solid #e5e5e5;
+}
+.filter-tags legend {
+  padding: 1em;
+  font-weight: bold;
+}
+.filter-tags ul li {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1em;
+}
+.filter-tags ul li label {
+  background: none;
+  border: 1px solid #262730;
+  padding: 0.2em 1em;
+  color: #262730;
+}
+
 /*!
  * sanitize.css
  *
@@ -718,6 +738,14 @@ footer .view-header h2 {
   padding: 0;
   align-items: center;
   font-size: 2rem;
+}
+footer .view-header button {
+  background: #262730;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  padding: 0.2em 0.6em;
+  cursor: pointer;
 }
 
 .archive-week {
