--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,6 +29,9 @@
   flex-direction: column;
   align-items: center;
 }
+.note-item span {
+  font-weight: bold;
+}
 @media screen and (min-width: 641px) {
   .note-item {
     flex-flow: row wrap;
