--- a/public/styles/components/_modal.scss
+++ b/public/styles/components/_modal.scss
@@ -13,12 +13,38 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 1em;
     margin: 10% auto;
-    width: 600px;
-    background-color: steelblue;
+    background: #337ea9;
     color: #fff;
     padding: 1em;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    label {
+      font-weight: bold;
+    }
+
+    input {
+      padding: 1em;
+      border: none;
+    }
+  }
+
+  .close-modal {
+    background: none;
+    border-radius: 5px;
+    border: none;
+    background: #f45050;
+    color: #fff;
+    margin-left: auto;
+    font-size: 2rem;
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      color: #f45050;
+      background: #fff;
+    }
   }
 }
