--- a/public/styles/layouts/_footer.scss
+++ b/public/styles/layouts/_footer.scss
@@ -21,12 +21,18 @@ footer {
     }
 
     button {
-      background: #262730;
+      background: #337ea9;
       border: none;
       color: white;
+      font-weight: bold;
       border-radius: 5px;
       padding: 0.2em 0.6em;
       cursor: pointer;
+      transition: 0.3s;
+
+      &:hover {
+        background: #286487;
+      }
     }
   }
 }
