--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -14,6 +14,9 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  // background: #f6f5f1;
+  // color #353534
+  // note backgroundColor #fcfbf7
 }
 
 .hidden {
