--- a/public/styles/components/_drawer.scss
+++ b/public/styles/components/_drawer.scss
@@ -10,24 +10,12 @@
   padding-top: 1em;
   transition: 0.5s;
 
-  ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    padding: 1em;
-
-    a {
-      text-decoration: none;
-      color: black;
-      display: inline-block;
-      transition: 0.3s;
-    }
-  }
-
   .select-view-close {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    margin-right: 0.4em;
+    margin-top: 0.5em;
 
     button {
       border: none;
@@ -36,25 +24,62 @@
     }
   }
 
-  .select-view-link {
+  ul {
+    list-style: none;
     display: flex;
     flex-direction: column;
-    border-bottom: 1px solid black;
-    padding-bottom: 1em;
+    padding: 1em;
+
+    .select-view-link {
+      display: flex;
+      flex-direction: column;
+      border-bottom: 1px solid black;
+      padding-bottom: 1em;
+      gap: 0.4em;
+
+      a {
+        text-decoration: none;
+        color: #37352f;
+        font-weight: bold;
+        display: inline-block;
+        transition: 0.3s;
+        padding: 0.1em 0.6em;
+        border-radius: 5px;
+
+        &:hover {
+          background-color: #e9e8e8;
+        }
+      }
+    }
+  }
+
+  h4 {
+    margin-top: 1.4em;
   }
 
   .select-view-week {
-    padding-top: 1em;
     display: flex;
     flex-flow: row wrap;
 
     li {
       display: flex;
       justify-content: center;
-      border-left: 1px solid black;
-      border-right: 1px solid black;
-      margin: 1em 0.2em;
-      width: 30%;
+      margin: 0.2em 0.2em 1em;
+      width: 20%;
+
+      a {
+        text-decoration: none;
+        color: #37352f;
+        font-weight: bold;
+        display: inline-block;
+        padding: 0.4em;
+        transition: 0.3s;
+        border-radius: 5px;
+
+        &:hover {
+          background-color: #e9e8e8;
+        }
+      }
     }
   }
 }
