--- a/public/styles/components/_note.scss
+++ b/public/styles/components/_note.scss
@@ -1,41 +1,90 @@
 @use "../config/breakpoints";
 
-.note-item {
-  list-style: none;
-  padding: 0;
+.note-section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  flex-flow: row wrap;
 
-  span {
-    font-weight: bold;
-  }
-
-  @include breakpoints.desktop {
-    flex-flow: row wrap;
-  }
-
-  li {
+  .note-item {
+    list-style: none;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
-    margin: 1em;
-    padding: 1em;
+    align-items: center;
 
-    width: 90%;
+    .single-note-heading {
+      margin-right: 2em;
+      span {
+        font-weight: bold;
+      }
+    }
 
     @include breakpoints.desktop {
-      max-width: fit-content;
+      flex-flow: row wrap;
     }
-  }
 
-  a {
-    text-decoration: none;
-    color: red;
-  }
+    .single-note {
+      // background-color: #fcfbf7;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      display: flex;
+      flex-direction: column;
+      border: 1px solid black;
+      border-radius: 5px;
+      margin: 1em;
+      padding: 1em;
+      position: relative;
 
-  .archive-week {
-    display: flex;
-    justify-content: flex-start;
+      @include breakpoints.desktop {
+        max-width: fit-content;
+      }
+
+      .note-delete {
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: #f1efee;
+        border-radius: 5px;
+        padding: 0.2em;
+        margin: 0.2em 0.2em 0.2em 1em;
+        color: #262730;
+        transition: 0.3s;
+        &:hover {
+          background-color: #262730;
+          color: #f1efee;
+        }
+      }
+    }
+
+    .note-tags {
+      margin: 1em 0;
+
+      ul {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        gap: 1em;
+
+        li {
+          display: flex;
+          flex-flow: row wrap;
+          padding: 0.2em 0.6em;
+
+          background: #f1efee;
+          color: #262730;
+          border: 1px solid black;
+          border-radius: 5px;
+          border: none;
+        }
+      }
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    .archive-week {
+      display: flex;
+      justify-content: flex-start;
+    }
   }
 }
