--- a/public/styles/components/_detailNote.scss
+++ b/public/styles/components/_detailNote.scss
@@ -1,13 +1,93 @@
 .detail-note {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 1em 2em;
 
-  ul {
-    list-style: none;
-    padding: 0;
+  h3 {
+    text-align: center;
+  }
+
+  .detail-note-options {
     display: flex;
-    flex-flow: row wrap;
-    gap: 1em;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1em;
+
+    div {
+      &:first-child {
+        a {
+          text-decoration: none;
+          color: #262730;
+          width: fit-content;
+          display: block;
+          margin: 0 auto;
+
+          background: #337ea9;
+          border: none;
+          color: white;
+          font-weight: bold;
+          border-radius: 5px;
+          padding: 0.2em 0.6em;
+          cursor: pointer;
+          transition: 0.3s;
+
+          &:hover {
+            background: #286487;
+          }
+        }
+      }
+
+      a,
+      button {
+        background-color: #f1efee;
+        border-radius: 5px;
+        padding: 0.2em;
+        cursor: pointer;
+
+        color: #262730;
+        transition: 0.3s;
+        text-decoration: none;
+        text-align: center;
+        color: #262730;
+        border: 1px solid black;
+        border-radius: 5px;
+        border: none;
+        &:hover {
+          background-color: #262730;
+          color: #f1efee;
+        }
+      }
+    }
+  }
+
+  .detail-note-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .detail-note-tags {
+    margin: 1em 0 0 0;
+
+    ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      gap: 1em;
+
+      li {
+        display: flex;
+        flex-flow: row wrap;
+        padding: 0.2em 0.6em;
+
+        background: #f1efee;
+        color: #262730;
+        border: 1px solid black;
+        border-radius: 5px;
+        border: none;
+      }
+    }
   }
 }
