--- a/public/styles/components/_modal.scss
+++ b/public/styles/components/_modal.scss
@@ -8,6 +8,7 @@
   width: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
+  border: none;
 
   form {
     display: flex;
@@ -21,13 +22,14 @@
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-    label {
-      font-weight: bold;
-    }
-
-    input {
+    input,
+    textarea {
       padding: 1em;
       border: none;
+      box-sizing: border-box;
+      width: calc(100% - 60px);
+      border-radius: 5px;
+      font-family: Arial, Helvetica, sans-serif;
     }
   }
 
@@ -45,6 +47,25 @@
     &:hover {
       color: #f45050;
       background: #fff;
+    }
+  }
+
+  button {
+    &:last-child {
+      margin-top: 1em;
+      padding: 0.2em 0.6em;
+      border-radius: 5px;
+      border: none;
+      background: #57a773;
+      color: #fff;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: 0.3s;
+
+      &:hover {
+        color: #73c3af;
+        background: #fff;
+      }
     }
   }
 }
