--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -31,7 +31,7 @@
                 <%}) %>
               </ul>
             </div>
-            <a href="/note/<%= item._id%>">Go to note</a>
+            <a href="/note/<%= item._id%>" class="goto-note">Go to note</a>
           </li>
         </ul>
       </section>
