--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,9 @@
           <h1><a href="/">Notewood</a></h1>
         </div>
         <div class="index-link">
-          <a href="/currentWeek"> get to CurrentWeek</a>
-
-          <a href="/currentWeek"> Signup placeholder</a>
-
-          <a href="/currentWeek"> guest login placeholder</a>
-          <a href="/currentWeek"> About</a>
+          <a href="/currentWeek">Go to CurrentWeek</a>
+          <!-- <a href="/currentWeek">Signup placeholder</a> -->
+          <!-- <a href="/currentWeek">About</a> -->
         </div>
       </div>
     </div>
