--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,6 +8,7 @@
   width: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
+  border: none;
 }
 .modal form {
   display: flex;
@@ -21,12 +22,14 @@
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.modal form label {
-  font-weight: bold;
-}
-.modal form input {
+.modal form input,
+.modal form textarea {
   padding: 1em;
   border: none;
+  box-sizing: border-box;
+  width: calc(100% - 60px);
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .modal .close-modal {
   background: none;
@@ -41,6 +44,21 @@
 }
 .modal .close-modal:hover {
   color: #f45050;
+  background: #fff;
+}
+.modal button:last-child {
+  margin-top: 1em;
+  padding: 0.2em 0.6em;
+  border-radius: 5px;
+  border: none;
+  background: #57a773;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.modal button:last-child:hover {
+  color: #73c3af;
   background: #fff;
 }
 
@@ -104,6 +122,8 @@
   list-style: none;
   padding: 0;
   display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   gap: 1em;
 }
 .note-section .note-item .note-tags ul li {
@@ -118,6 +138,29 @@
 }
 .note-section .note-item a {
   text-decoration: none;
+  text-align: center;
+  color: #262730;
+  border: 1px solid black;
+  border-radius: 5px;
+  border: none;
+}
+.note-section .note-item .goto-note {
+  color: #262730;
+  width: fit-content;
+  display: block;
+  margin: 0 auto;
+  background: #337ea9;
+  border: none;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0.2em 0.6em;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-top: 1em;
+}
+.note-section .note-item .goto-note:hover {
+  background: #286487;
 }
 .note-section .note-item .archive-week {
   display: flex;
@@ -234,14 +277,80 @@
 .detail-note {
   display: flex;
   flex-direction: column;
+  padding: 1em 2em;
+}
+.detail-note h3 {
+  text-align: center;
+}
+.detail-note .detail-note-options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1em;
+}
+.detail-note .detail-note-options div:first-child a {
+  text-decoration: none;
+  color: #262730;
+  width: fit-content;
+  display: block;
+  margin: 0 auto;
+  background: #337ea9;
+  border: none;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0.2em 0.6em;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.detail-note .detail-note-options div:first-child a:hover {
+  background: #286487;
+}
+.detail-note .detail-note-options div a,
+.detail-note .detail-note-options div button {
+  background-color: #f1efee;
+  border-radius: 5px;
+  padding: 0.2em;
+  cursor: pointer;
+  color: #262730;
+  transition: 0.3s;
+  text-decoration: none;
+  text-align: center;
+  color: #262730;
+  border: 1px solid black;
+  border-radius: 5px;
+  border: none;
+}
+.detail-note .detail-note-options div a:hover,
+.detail-note .detail-note-options div button:hover {
+  background-color: #262730;
+  color: #f1efee;
+}
+.detail-note .detail-note-content {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
-.detail-note ul {
+.detail-note .detail-note-tags {
+  margin: 1em 0 0 0;
+}
+.detail-note .detail-note-tags ul {
   list-style: none;
   padding: 0;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
   gap: 1em;
+}
+.detail-note .detail-note-tags ul li {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0.2em 0.6em;
+  background: #f1efee;
+  color: #262730;
+  border: 1px solid black;
+  border-radius: 5px;
+  border: none;
 }
 
 .filter-tags {
