--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,19 +14,19 @@
     </div>
     <ul>
       <div class="select-view-link">
-        <li><a href="/">Go to home</a></li>
-        <li><a href="/currentWeek">Go to current week</a></li>
-        <li><a href="/archive">Go to archive</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/currentWeek">Current week</a></li>
+        <li><a href="/archive">Archive</a></li>
       </div>
       <h4>Select week</h4>
       <div class="select-view-week">
         <% yearWeek.forEach((year) => { %> <% if(year === Number(currentWeek)) {
         %>
 
-        <li><a href="/currentWeek"> <%= year %></a></li>
+        <li><a href="/currentWeek"><%= year %></a></li>
 
         <% } else { %>
-        <li><a href="/targetWeek/<%= year %>"> <%= year %></a></li>
+        <li><a href="/targetWeek/<%= year %>"><%= year %></a></li>
         <% } %> <% }) %>
       </div>
     </ul>
