--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
         </div>
         <div class="index-link">
           <a href="/currentWeek">Go to CurrentWeek</a>
-          <!-- <a href="/currentWeek">Signup placeholder</a> -->
-          <!-- <a href="/currentWeek">About</a> -->
+          <a href="/currentWeek">Sign in placeholder</a>
+          <a href="/currentWeek">About</a>
         </div>
       </div>
     </div>
